ct-function.html commit

--- a/ct-function.html
+++ b/ct-function.html
@@ -41,17 +41,17 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>The HTML Presentation Framework</h3>
+					<h1>컴퓨팅적 사고 </h1>
+					<h3>함수(Function) </h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>Created by <a href="http://yslee.cs-cnu.org">이영석</a> / <a href="http://twitter.com/yslee1225">@yslee1225</a></small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
+					<h2>함수란 무엇인가? </h2>
 					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
+					  어떤 일을 수행할 때 작게 나누어서 실행시킬 수 있는 단위의 작업
 					</p>
 				</section>
 
