--- a/ct-function.html
+++ b/ct-function.html
@@ -51,8 +51,12 @@
 				<section>
 					<h2>함수란 무엇인가? </h2>
 					<p>
-					  어떤 일을 수행할 때 작게 나누어서 실행시킬 수 있는 단위의 작업
+					  어떤 일을 수행할 때 나누어서 실행시킬 수 있는 작은 단위의 작업
 					</p>
+					<p class ="fragment">집안 일은 어떤 작은 일로 나누어질까? </p>
+					<p class ="fragment">요리와 설거지하기</p>
+					<p class ="fragment">청소하기 </p>
+					<p class ="fragment">빨래하기</p>
 				</section>
 
 				<!-- Example of nested vertical slides -->
