--- a/ct-function.html
+++ b/ct-function.html
@@ -50,14 +50,17 @@
 
 				<section>
 					<h2>함수란 무엇인가? </h2>
-					<p>
-					  어떤 일을 수행할 때 나누어서 실행시킬 수 있는 작은 단위의 작업
-					</p>
-					<p class ="fragment">집안 일은 어떤 작은 일로 나누어질까? </p>
+					<p> 어떤 일을 수행할 때 나누어서 실행시킬 수 있는 작은 단위의 작업 </p>
+					<p> 반복하는 일</p>
+				</section>
+
+				<section>
+					<h2> 예) "집안일"은 어떤 작은 일로 나누어질까? </h2>
 					<p class ="fragment">요리와 설거지하기</p>
 					<p class ="fragment">청소하기 </p>
-					<p class ="fragment">빨래하기</p>
+					<p class ="fragment">빨래하기 </p>
 				</section>
+
 
 				<!-- Example of nested vertical slides -->
 				<section>
