--- a/ct-function.html
+++ b/ct-function.html
@@ -93,6 +93,7 @@ clean("거실")
 				</section>
 
 				<section>
+					<h2>Trinket에서 코드 실행하기</h2>
 					<iframe src="https://trinket.io/embed/python/2f5fbe0856" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 				</section>
 
@@ -114,7 +115,8 @@ sing("Fred")
 					</code></pre>
 				</section>
 
-				<section>
+				<section data-background="#dddddd">
+					<h2>Pythontutor에서 코드 시각화하기</h2>
 <iframe width="800" height="500" frameborder="0" src="http://pythontutor.com/iframe-embed.html#code=%23+From+%22Teaching+with+Python%22+by+John+Zelle%0Adef+happy(%29%3A%0A++++print(%22Happy+Birthday+to+you!%22%29%0A%0Adef+sing(P%29%3A%0A++++happy(%29%0A++++happy(%29%0A++++print(%22Happy+Birthday+dear+%22+%2B+P+%2B+%22!%22%29%0A++++happy(%29%0A%0A%23+main%0Asing(%22Fred%22%29&origin=opt-frontend.js&cumulative=false&heapPrimitives=false&textReferences=false&py=2&rawInputLstJSON=%5B%5D&curInstr=0&codeDivWidth=350&codeDivHeight=400"> </iframe>
 				</section>
 
