--- a/bigdata.html
+++ b/bigdata.html
@@ -78,6 +78,7 @@
 					<h2>빅데이터 문제를 잘 푸는 핵심 기술은 ?</h2>
 					<p> 분석: 추천, 분류, 예측 </p>
 					<p> SW플랫폼:  분산컴퓨팅 SW (MapReduce, Hadoop, Spark, ...)</p>
+				</section>
 
 
 
