--- a/bigdata.html
+++ b/bigdata.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js – The HTML Presentation Framework</title>
+		<title>Big Data Overview in reveal.js – The HTML Presentation Framework</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="author" content="Youngseok Lee">
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -72,15 +72,16 @@
 				</section>
 
 				<section>
-					<h2>빅데이터 문제를 잘 푸는 기술을 가진 회사는 ?</h2>
+					<h2>빅데이터 기술을 가진 회사는 ?</h2>
 					<p class="fragment">  Google, Facebook, Walmart, eBay, ...
 					</p>
 				</section>
 
 				<section>
-					<h2>빅데이터 문제 해결 핵심 기술은 ?</h2>
-					<p> 분석: 추천, 분류, 예측 </p>
+					<h2>빅데이터 핵심 기술은 ?</h2>
+					<p> 분석 : 추천, 분류, 예측 </p>
 					<p> SW플랫폼:  분산컴퓨팅 SW (MapReduce, Hadoop, Spark, ...)</p>
+					<frame> </p>
 				</section>
 
 
