--- a/bigdata.html
+++ b/bigdata.html
@@ -87,13 +87,13 @@
 
 
 				<section>
-					<h2>Recommendation Example</h2>
-					<iframe src="https://www.amazon.com" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+					<h2>Example: Web Search</h2>
+					<iframe src="https://sungmooncho.com/2012/08/26/pagerank/" width="100%" height="456" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 				</section>
 
 				<section>
-					<h2>Prediction Example</h2>
-					<iframe src="http://www.huffingtonpost.com/2014/01/18/amazon-anticipatory-shipping-items-before-ordered_n_4623499.html" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+					<h2>Example: Prediction</h2>
+					<iframe src="http://www.huffingtonpost.com/2014/01/18/amazon-anticipatory-shipping-items-before-ordered_n_4623499.html" width="100%" height="456" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 
 
 				</section>
