--- a/bigdata.html
+++ b/bigdata.html
@@ -40,7 +40,7 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>
+				<section data-background="https://www.google.co.kr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiHvbOrrJLLAhXIH6YKHXB0C_4QjRwIBw&url=http%3A%2F%2Fwww.eazystock.com%2Fblog%2F2015%2F09%2F01%2F4-ways-big-data-is-changing-how-companies-manage-inventory%2F&psig=AFQjCNFMpqHl-aJhKf4QknN5suRfE2rErw&ust=1456470026292613">
 					<h1>빅데이터 </h1>
 					<h3> 데이터에 대한 이해 </h3>
 					<p>
@@ -93,7 +93,7 @@
 
 				<section>
 					<h2>Example: Prediction</h2>
-					<iframe src="http://www.huffingtonpost.com/2014/01/18/amazon-anticipatory-shipping-items-before-ordered_n_4623499.html" width="100%" height="456" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+					<iframe src="http://www.huffingtonpost.com/2014/01/18/amazon-anticipatory-shipping-items-before-ordered_n_4623499.html" width="100%" height="556" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 
 
 				</section>
