--- a/bigdata.html
+++ b/bigdata.html
@@ -53,7 +53,7 @@
 
 				<section>
 					<h2>데이터가 중요한가요? </h2>
-					<p> More data usually beats better algorithm</p>
+					<p class="fragmnet"> More data usually beats better algorithm</p>
 				</section>
 
 				<section>
