--- a/bigdata.html
+++ b/bigdata.html
@@ -93,8 +93,8 @@
 
 				<section>
 					<h2>Example: Recommendation</h2>
-					<p> Friends of Friend </p>
-					<iframe src="https://research.facebook.com/blog/three-and-a-half-degrees-of-separation/" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+					<p> Facebook's EdgeRank</p>
+					<img width="400" height="300" data-src="http://www.socialbakers.com//storage/www/edgerank-1-.png">
 				</section>
 
 				<section>
@@ -138,6 +138,7 @@
 				<section>
 					<h2>Trends</h2>
 					<iframe src="https://www.google.com/trends/explore#q=hadoop" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+					<iframe scrolling="no" style="border:none;" width="640" height="330" src="http://www.google.com/trends/fetchComponent?hl=en-US&q=Hadoop&cmpt=q&content=1&cid=TIMESERIES_GRAPH_0&export=5&w=640&h=330"></iframe>
 				</section>
 
 				<section>
