--- a/bigdata.html
+++ b/bigdata.html
@@ -137,7 +137,7 @@
 
 				<section>
 					<h2>Trends</h2>
-					<iframe scrolling="no" style="border:none;" width="640" height="330" src="http://www.google.com/trends/fetchComponent?hl=en-US&q=Hadoop&cmpt=q&content=1&cid=TIMESERIES_GRAPH_0&export=5&w=640&h=330"></iframe>
+                           		<iframe src="https://www.google.com/trends/embed.js?hl=ko&q=hadoop&tz=Etc/GMT-9&content=1&cid=TIMESERIES_GRAPH_0&export=5&w=500&h=330"></iframe>
 				</section>
 
 				<section>
