--- a/bigdata.html
+++ b/bigdata.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>빅데이터 </h1>
+					<h1, color=#fff>빅데이터 </h1>
 					<h3> 데이터에 대한 이해 </h3>
 					<p>
 						<small>Created by <a href="http://yslee.cs-cnu.org">이영석 (http://yslee.cs-cnu.org)</a> </small>
@@ -136,7 +136,7 @@
 				</section>
 
 				<section>
-					<h2>Trends</h2>
+					<h2>Google Trends</h2>
 					<iframe scrolling="no" style="border:none;" width="1200" height="800" src="http://www.google.com/trends/fetchComponent?hl=en-US&q=Hadoop &cmpt=q&content=1&cid=TIMESERIES_GRAPH_0&export=5&w=1200&h=800"></iframe>
 				</section>
 
