--- a/bigdata.html
+++ b/bigdata.html
@@ -165,6 +165,7 @@
 					<ul>
 					<li> MapReduce is a programming model for a large data set </li>
 					<li> Published by J. Dean and S. Ghemawat, <a href="http://research.google.com/archive/mapreduce-osdi04-slides/index.html">MapReduce: Simplified Data Processing on Large Cluster, OSDI, 2004 </a> </li>
+					<iframe src="http://research.google.com/archive/mapreduce-osdi04-slides/index.html" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 					</ul>
 
 					
