--- a/bigdata.html
+++ b/bigdata.html
@@ -164,10 +164,9 @@
 					<h1>MapReduce </h1>
 					<ul>
 					<li> MapReduce is a programming model for a large data set </li>
-					<li> Published by J. Dean and S. Ghemawat, <a href="http://research.google.com/archive/mapreduce-osdi04-slides/index.html">MapReduce: Simplified Data Processing on Large Cluster, OSDI, 2004 </a> </li>
-					<iframe src="http://research.google.com/archive/mapreduce-osdi04-slides/index.html" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+					<li> Published by J. Dean and S. Ghemawat, <a href="http://research.google.com/archive/mapreduce-osdi04-slides/index.html">MapReduce: Simplified Data Processing on Large Cluster</a>, OSDI, 2004 </li>
+					<iframe src="http://research.google.com/archive/mapreduce-osdi04-slides/index.html" width="100%" height="456" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 					</ul>
-
 					
 				</section>
 
@@ -191,6 +190,13 @@ function reduce(String word, Iterator partialCounts):
 					</code></pre>
 
 				</section>
+
+				<section>
+					<h1>MapReduce </h1>
+					<ul>
+				</section>
+
+
 
 
 			</div>
