--- a/bigdata.html
+++ b/bigdata.html
@@ -163,7 +163,6 @@
 				<section>
 					<h1>MapReduce </h1>
 					<ul>
-					<li> MapReduce is a programming model for a large data set </li>
 					<li> Published by J. Dean and S. Ghemawat, <a href="http://research.google.com/archive/mapreduce-osdi04-slides/index.html">MapReduce: Simplified Data Processing on Large Cluster</a>, OSDI, 2004 </li>
 					<iframe src="http://research.google.com/archive/mapreduce-osdi04-slides/index.html" width="100%" height="456" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 					</ul>
@@ -192,8 +191,9 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h1>MapReduce </h1>
-					<ul>
+					<h1>Amazon Elastic MapReduce</h1>
+					<p> </p>
+					<ifrmae  width="800" height="600" src="https://aws.amazon.com/ko/elasticmapreduce/"> </iframe>
 				</section>
 
 
