--- a/bigdata.html
+++ b/bigdata.html
@@ -193,7 +193,7 @@ function reduce(String word, Iterator partialCounts):
 				<section>
 					<h2>Amazon Elastic MapReduce</h2>
 					<p> </p>
-					<ifrmae  width="800" height="600" src="https://aws.amazon.com/ko/elasticmapreduce/"> </iframe>
+					<iframe  width="800" height="600" src="https://aws.amazon.com/ko/elasticmapreduce/"> </iframe>
 				</section>
 
 
