--- a/bigdata.html
+++ b/bigdata.html
@@ -191,9 +191,9 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h2>Amazon Elastic MapReduce</h2>
-					<p> </p>
-					<iframe  width="800" height="600" src="https://aws.amazon.com/ko/elasticmapreduce/"> </iframe>
+					<h2>Melon</h2>
+					
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/qpaAGZZf5VG6LR" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/gruter/gruter-techday-2014-melon-bigdata" title="Gruter TECHDAY 2014 MelOn BigData" target="_blank">Gruter TECHDAY 2014 MelOn BigData</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/gruter">Gruter</a></strong> </div>
 				</section>
 
 
