--- a/bigdata.html
+++ b/bigdata.html
@@ -197,6 +197,10 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 
+				<section>
+					<h2>R and others </h2>
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/m2kHtjlrDe9wt3" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/gruter/ruck2015-gruter-public" title="Big data analysis with R and Apache Tajo (in Korean)" target="_blank">Big data analysis with R and Apache Tajo (in Korean)</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/gruter">Gruter</a></strong> </div>
+				</section>
 
 
 			</div>
