--- a/bigdata.html
+++ b/bigdata.html
@@ -201,7 +201,30 @@ function reduce(String word, Iterator partialCounts):
 					<h2>R and others </h2>
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/m2kHtjlrDe9wt3" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/gruter/ruck2015-gruter-public" title="Big data analysis with R and Apache Tajo (in Korean)" target="_blank">Big data analysis with R and Apache Tajo (in Korean)</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/gruter">Gruter</a></strong> </div>
 				</section>
+	
+				<section>
+					<h2>Amazon </h2>
+			<iframe src="//www.slideshare.net/slideshow/embed_code/key/1hChBA1eMEspky" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/awskr/awskrug-reinvent-iot" title="AWSKRUG 콘퍼런스 - re:Invent 신규 서비스 (윤석찬) - 빅데이터 분석, 모바일 및 IoT를 중심으로" target="_blank">AWSKRUG 콘퍼런스 - re:Invent 신규 서비스 (윤석찬) - 빅데이터 분석, 모바일 및 IoT를 중심으로</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/awskr">AWS Korea UserGroup (AWS한국사용자모임)</a></strong> </div>
+				</section>
 
+				<section>
+					<h2>NCsoft</h2>
+					<iframe src="//www.slideshare.net/slideshow/embed_code/key/HHFpr24lFz8Vm6" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/LeeEunJo/r-14930327" title="R을 이용한 게임 데이터 분석" target="_blank">R을 이용한 게임 데이터 분석</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/LeeEunJo">Eun-Jo Lee</a></strong> </div>
+				</section>
+
+				<section>
+					<h2>5Rocks</h2>
+					<iframe src="//www.slideshare.net/slideshow/embed_code/key/cKxtsx8jdw49g0" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/deview/244-5rocksdeview" title="244 5rocks-deview" target="_blank">244 5rocks-deview</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/deview">NAVER D2</a></strong> </div>
+				</section>
+
+				<section>
+					<h2> DNLAB </h2>
+					<iframe src="//www.slideshare.net/slideshow/embed_code/key/l8Gwlp464dK6TT" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/YeonheeLee/net-flowhadoop-flocon2013yhleefinal" title="Net flowhadoop flocon2013_yhlee_final" target="_blank">Net flowhadoop flocon2013_yhlee_final</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/YeonheeLee">Yeounhee Lee</a></strong> </div>
+				</section>
+
+				<section>
+					<h2> News </h2>
+					<iframe src ="http://t.dt.co.kr/contents.html?article_no=2013011602011060746002" width="595" height="485"</iframe>
 
 			</div>
 
