--- a/bigdata.html
+++ b/bigdata.html
@@ -223,8 +223,9 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h2> News </h2>
-					<iframe src ="http://t.dt.co.kr/contents.html?article_no=2013011602011060746002" width="595" height="485"</iframe>
+					<h2> DNLAB's News </h2>
+					<iframe src="http://t.dt.co.kr/contents.html?article_no=2013011602011060746002" width="595" height="485"></iframe>
+				</section>
 
 			</div>
 
