--- a/bigdata.html
+++ b/bigdata.html
@@ -224,7 +224,7 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> DNLAB's News </h2>
-					<iframe src="http://t.dt.co.kr/contents.html?article_no=2013011602011060746002" width="595" height="485"></iframe>
+					<iframe src="http://www.dt.co.kr/contents.html?article_no=2013011602011060746002" width="800" height="600"></iframe>
 				</section>
 
 			</div>
