--- a/bigdata.html
+++ b/bigdata.html
@@ -231,14 +231,14 @@ function reduce(String word, Iterator partialCounts):
 					<ul>
 					<li> 여러분은 컴퓨터공학과 학생입니다. </li>
 					<li> 데이터과학: 컴퓨터공학 + 통계학 (데이터마이닝, 머신러닝, 딥러닝) </li>
-					<li> Hadoop/Spark/Python/R + ... </li>
+					<li> Hadoop/Hive/Spark + Python scikit + R + ...  </li>
 					<li> 데이터과학은 문제를 해결하는 도구! </li>
 					</ul>
 				</section>
 
 				<section>
 					<h2> Quantified Self </h2>
-					<iframe src="http://www.quantifiedself.com" width="800" height="600">
+					<iframe src="http://quantifiedself.com" width="800" height="600">
 				</section>
 
 			</div>
