--- a/bigdata.html
+++ b/bigdata.html
@@ -238,6 +238,16 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> Quantified Self </h2>
+					<ul>
+					<li>> 자신을 측정하여 삶의 개선하려는 운동 </li>
+					<li> 데이터: 핵심은 자동 수집 및 분석</li>
+					<li> 예) Fitbit, Rescue, Coachme.com, </li>
+					</ul>
+					
+				</section>
+				<section>
+					<h2> Graph of My Fitness </h2>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/qPGkmtZf0q0" frameborder="0" allowfullscreen></iframe>
 				</section>
 
 			</div>
