--- a/bigdata.html
+++ b/bigdata.html
@@ -231,16 +231,16 @@ function reduce(String word, Iterator partialCounts):
 					<ul>
 					<li> 여러분은 컴퓨터공학과 학생입니다. </li>
 					<li> 데이터과학: 컴퓨터공학 + 통계학 (데이터마이닝, 머신러닝, 딥러닝) </li>
-					<li> Hadoop/Hive/Spark + Python scikit + R + ...  </li>
-					<li> 데이터과학은 문제를 해결하는 도구! </li>
+					<li> Hadoop/Hive/Spark + Python scikit + R + Tensorflow ...  </li>
+					<li> 데이터과학은 문제를 해결하는 도구: Samll data부터 시작</li>
 					</ul>
 				</section>
 
 				<section>
-					<h2> Quantified Self </h2>
+					<h2> <a href="http://www.quantifiedself.com"> Quantified Self </a> </h2>
 					<ul>
-					<li>> 자신을 측정하여 삶의 개선하려는 운동 </li>
-					<li> 데이터: 핵심은 자동 수집 및 분석</li>
+					<li> 자신을 측정하여 삶의 개선하려는 운동 </li>
+					<li> 핵심은 자동 수집 및 분석</li>
 					<li> 예) Fitbit, Rescue, Coachme.com, </li>
 					</ul>
 					
@@ -248,6 +248,15 @@ function reduce(String word, Iterator partialCounts):
 				<section>
 					<h2> Graph of My Fitness </h2>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/qPGkmtZf0q0" frameborder="0" allowfullscreen></iframe>
+				</section>
+
+				<section>
+					<h2> Summary </h2>
+					<ul>
+					<li> Big data:  </li>
+					<li> Small data:  </li>
+					<li> 컴퓨터공학 기반을 갖춘 데이터과학자가 되자! </li>
+					</ul>
 				</section>
 
 			</div>
