--- a/bigdata.html
+++ b/bigdata.html
@@ -226,15 +226,6 @@ function reduce(String word, Iterator partialCounts):
 					<h2> DNLAB's News </h2>
 					<iframe src="http://www.dt.co.kr/contents.html?article_no=2013011602011060746002" width="800" height="600"></iframe>
 				</section>
-				<section>
-					<h2> Interested in Big Data ? </h2>
-					<ul>
-					<li> 여러분은 컴퓨터공학과 학생입니다. </li>
-					<li> 데이터과학: 컴퓨터공학 + 통계학 (데이터마이닝, 머신러닝, 딥러닝) </li>
-					<li> Hadoop/Hive/Spark + Python scikit + R + Tensorflow ...  </li>
-					<li> 데이터과학은 문제를 해결하는 도구: Samll data부터 시작</li>
-					</ul>
-				</section>
 
 				<section>
 					<h2> <a href="http://www.quantifiedself.com"> Quantified Self </a> </h2>
@@ -251,11 +242,18 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h2> Summary </h2>
+					<h2> WordCloud</h2>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/rCRVFhRaDwA" frameborder="0" allowfullscreen></iframe>
+				</section>
+
+				<section>
+					<h2> Interested in Big Data ? </h2>
 					<ul>
-					<li> Big data:  </li>
-					<li> Small data:  </li>
-					<li> 컴퓨터공학 기반을 갖춘 데이터과학자가 되자! </li>
+					<li> 데이터과학: 컴퓨터공학 + 통계학 (데이터마이닝, 머신러닝, 딥러닝) </li>
+					<li> 데이터과학은 문제를 해결하는 도구: Samll data부터 시작 (LAMP) </li>
+					<li> Hadoop/Hive/Spark + Python scikit + R + Tensorflow ... (SMAQ) </li>
+					<li> 여러분은 컴퓨터공학과 학생입니다. </li>
+					<li> 컴퓨터공학 기반을 갖춘 데이터과학자가 됩시다 ! </li>
 					</ul>
 				</section>
 
