--- a/bigdata.html
+++ b/bigdata.html
@@ -275,6 +275,7 @@ function reduce(String word, Iterator partialCounts):
 				center: true,
 
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
+				slideNumber: true,
 
 				// Optional reveal.js plugins
 				dependencies: [
