--- a/bigdata.html
+++ b/bigdata.html
@@ -223,12 +223,8 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h2> GitHub </h2>
-					<iframe src="https://github.com/ssallys/p3" width='800' height='600'</iframe>
-				</section>
-
-				<section>
 					<h2> DNLAB's News </h2>
+					<p> <a href="https://github.com/ssallys/p3"> Github P3 project </a> </p>
 					<iframe src="http://www.dt.co.kr/contents.html?article_no=2013011602011060746002" width="800" height="600"></iframe>
 				</section>
 
