--- a/bigdata.html
+++ b/bigdata.html
@@ -42,7 +42,7 @@
 			<div class="slides">
 				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
 					<h1>빅데이터 </h1>
-					<h3> 데이터에 대한 이해 </h3>
+					<h3>데이터 과학처럼 생각하기</h3>
 					<p>
 						<small>Created by <a href="http://yslee.cs-cnu.org">이영석 (http://yslee.cs-cnu.org)</a> </small>
 					</p>
@@ -233,7 +233,7 @@ function reduce(String word, Iterator partialCounts):
 					<ul>
 					<li> 자신을 측정하여 삶의 개선하려는 운동 </li>
 					<li> 핵심은 자동 수집 및 분석</li>
-					<li> 예) Fitbit, Rescue, Coachme.com, </li>
+					<li> 예) Fitbit, Rescue, Coachme.com, <a href="www.hellodatascience.com">Hellodatascience.com </a></li>
 					</ul>
 					
 				</section>
