--- a/bigdata.html
+++ b/bigdata.html
@@ -42,7 +42,7 @@
 			<div class="slides">
 				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
 					<h1>빅데이터 </h1>
-					<h3>데이터 과학처럼 생각하기</h3>
+					<h3>데이터 과학자처럼 생각하기</h3>
 					<p>
 						<small>Created by <a href="http://yslee.cs-cnu.org">이영석 (http://yslee.cs-cnu.org)</a> </small>
 					</p>
