--- a/bigdata.html
+++ b/bigdata.html
@@ -59,6 +59,16 @@
 				</section>
 
 				<section>
+					<h2>빅데이터 문제는 어떤 것인가요?</h2>
+					<ul>
+					<li> 전세계 웹 페이지에서 원하는 웹페이지 검색해서 찾기 </li>
+					<li> 검색엔진의 키워드로 독감 유행 예측하기</li>
+					<li> 트위터를 보고 선거 여론조사하기 </li>
+					<li> 10 TB 텍스트 파일 정렬하기</li>
+					</ul>
+				</section>
+
+				<section>
 					<h2> 100 TB 정렬을 빠르게 하기  </h2>
 					<ul> 
 					<li> 무슨 알고리즘을 쓸까? </li>
@@ -76,11 +86,6 @@
 
 				</section>
 
-				<section>
-					<h2>빅데이터 문제는 어떤 것인가요?</h2>
-					<p> 10 TB 텍스트 파일을 처리해야한다. 이 파일은 정수데이터를 포함하고 있다. 처리할 일은 파일을 열어서 정수를 모두 읽고 오름차순으로 정렬하는 것이다.</p>
-
-				</section>
 
 				<section>
 					<h2>빅데이터 기술을 가진 회사는 ?</h2>
