--- a/bigdata.html
+++ b/bigdata.html
@@ -68,7 +68,7 @@
 					</ul>
 				</section>
 
-				<section>
+				<section data-background="#dddddd">
 					<h2> 100 TB 정렬을 빠르게 하기  </h2>
 					<ul> 
 					<li> 무슨 알고리즘을 쓸까? </li>
