--- a/bigdata.html
+++ b/bigdata.html
@@ -90,6 +90,7 @@
 				<section>
 					<h2>빅데이터 기술을 가진 회사는 ?</h2>
 					<p class="fragment">  Google, Facebook, Amazon, MS, Walmart, eBay, ...
+					<p class="fragment">  Alibaba, Baidu, ...
 					</p>
 				</section>
 
