--- a/bigdata.html
+++ b/bigdata.html
@@ -232,7 +232,7 @@ function reduce(String word, Iterator partialCounts):
 					<iframe src="//www.slideshare.net/slideshow/embed_code/key/cKxtsx8jdw49g0" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/deview/244-5rocksdeview" title="244 5rocks-deview" target="_blank">244 5rocks-deview</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/deview">NAVER D2</a></strong> </div>
 				</section>
 
-				<section>
+				<section data-background="#dddddd">
 					<h2> DNLAB </h2>
 					<iframe src="//www.slideshare.net/slideshow/embed_code/key/l8Gwlp464dK6TT" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/YeonheeLee/net-flowhadoop-flocon2013yhleefinal" title="Net flowhadoop flocon2013_yhlee_final" target="_blank">Net flowhadoop flocon2013_yhlee_final</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/YeonheeLee">Yeounhee Lee</a></strong> </div>
 				</section>
