--- a/bigdata.html
+++ b/bigdata.html
@@ -268,7 +268,7 @@ function reduce(String word, Iterator partialCounts):
 					<li> 데이터과학: 컴퓨터공학 + 통계학 (데이터마이닝, 머신러닝, 딥러닝) </li>
 					<li> 데이터과학은 문제를 해결하는 도구: Samll data부터 시작 (LAMP) </li>
 					<li> Hadoop/Hive/Spark + Python scikit + R + Tensorflow ... (SMAQ) </li>
-					<li> 여러분은 컴퓨터공학과 학생입니다. </li>
+					<li> Git, JIRA, Jenkins, Slack, Trello, JUnit, Selenium, ...
 					<li> 컴퓨터공학 기반을 갖춘 데이터과학자가 됩시다 ! </li>
 					</ul>
 				</section>
