--- a/bigdata.html
+++ b/bigdata.html
@@ -54,7 +54,7 @@
 				<section>
 					<h2>데이터가 중요한가요? </h2>
 					<blockquote>
-					<p class="fragment"> &ldquo;More data usually beats better algorithm.&rdquo;</p>
+					<p class="fragment"> &ldquo;More data usually beats better algorithms.&rdquo; by Anand Rajaraman</p>
 					</blockquote>
 				</section>
 
@@ -89,7 +89,7 @@
 
 				<section>
 					<h2>빅데이터 기술을 가진 회사는 ?</h2>
-					<p class="fragment">  Google, Facebook, Amazon, MS, Walmart, eBay, ...
+					<p class="fragment">  Google, Facebook, Amazon, MS, Netflix, Walmart, eBay, ...
 					<p class="fragment">  Alibaba, Baidu, ...
 					</p>
 				</section>
