--- a/bigdata.html
+++ b/bigdata.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Big Data Overview in reveal.js – The HTML Presentation Framework</title>
+		<title>Big Data Overview in reveal.js</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Youngseok Lee">
@@ -263,10 +263,16 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
+					<h2> Data Mind </h2>
+					<p> Nightingale's Polar chart </p>
+					<img src="https://en.wikipedia.org/wiki/Pie_chart#/media/File:Nightingale-mortality.jpg">
+				</section>
+
+				<section>
 					<h2> Interested in Big Data ? </h2>
 					<ul>
 					<li> 데이터과학: 컴퓨터공학 + 통계학 (데이터마이닝, 머신러닝, 딥러닝) </li>
-					<li> 데이터과학은 문제를 해결하는 도구: Samll data부터 시작 (LAMP) </li>
+					<li> 데이터과학은 문제를 해결하는 도구: Small data부터 시작 (LAMP) </li>
 					<li> Hadoop/Hive/Spark + Python scikit + R + Tensorflow ... (SMAQ) </li>
 					<li> Git, JIRA, Jenkins, Slack, Trello, JUnit, Selenium, ...
 					<li> 컴퓨터공학 기반을 갖춘 데이터과학자가 됩시다 ! </li>
