--- a/bigdata.html
+++ b/bigdata.html
@@ -265,7 +265,7 @@ function reduce(String word, Iterator partialCounts):
 				<section>
 					<h2> Data Mind </h2>
 					<p> Nightingale's Polar chart </p>
-					<img src="https://en.wikipedia.org/wiki/Pie_chart#/media/File:Nightingale-mortality.jpg">
+					<img width="800" height="430" data-src="https://en.wikipedia.org/wiki/Pie_chart#/media/File:Nightingale-mortality.jpg">
 				</section>
 
 				<section>
