--- a/bigdata.html
+++ b/bigdata.html
@@ -264,8 +264,12 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> Data Mind </h2>
-					<p> Nightingale's Polar chart </p>
 					<img width="800" height="430" data-src="https://en.wikipedia.org/wiki/Pie_chart#/media/File:Nightingale-mortality.jpg">
+				</section>
+
+				<section>
+					<h2> Data Mind </h2>
+					<img width="800" height="430" data-src="https://en.wikipedia.org/wiki/John_Snow_(physician)#/media/File:Snow-cholera-map-1.jpg">
 				</section>
 
 				<section>
