--- a/bigdata.html
+++ b/bigdata.html
@@ -264,12 +264,13 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> Data Mind </h2>
-					<img width="800" height="430" data-src="https://en.wikipedia.org/wiki/Pie_chart#/media/File:Nightingale-mortality.jpg">
+<p><a href="https://commons.wikimedia.org/wiki/File:Nightingale-mortality.jpg#/media/File:Nightingale-mortality.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/1/17/Nightingale-mortality.jpg" alt="Polar chart by Florence Nightingale, 1858" height="1684" width="2680"></a><br>By <a href="//en.wikipedia.org/wiki/Florence_Nightingale" class="extiw" title="w:Florence Nightingale">w:Florence Nightingale</a> (1820?1910). - <a rel="nofollow" class="external free" href="http://www.royal.gov.uk/output/Page3943.asp">http://www.royal.gov.uk/output/Page3943.asp</a>, Public Domain, https://commons.wikimedia.org/w/index.php?curid=1474443</p>
+
 				</section>
 
 				<section>
 					<h2> Data Mind </h2>
-					<img width="800" height="430" data-src="https://en.wikipedia.org/wiki/John_Snow_(physician)#/media/File:Snow-cholera-map-1.jpg">
+					<img width="800" height="430" data-src="http://matrix.msu.edu/~johnsnow/images/online_companion/chapter_images/fig12-5.jpg">
 				</section>
 
 				<section>
