--- a/bigdata.html
+++ b/bigdata.html
@@ -158,7 +158,7 @@
 					<li> Open-source framework for running applications on large clusters built of commodity hardware</li>
 					<li> Implementation of MapReduce and HDFS </li>
 					</ul>
-					<img width="350" height="350" data-src="https://regmedia.co.uk/2014/05/08/hadoop_the_elephant_and_doug_cutting.png">
+					<img width="400" height="350" data-src="https://regmedia.co.uk/2014/05/08/hadoop_the_elephant_and_doug_cutting.png">
 				</section>
 
 				<section data-background="#dddddd">
@@ -248,10 +248,16 @@ function reduce(String word, Iterator partialCounts):
 					<ul>
 					<li> 자신을 측정하여 삶의 개선하려는 운동 </li>
 					<li> 핵심은 자동 수집 및 분석</li>
-					<li> 예) Fitbit, Rescue, Coachme.com, <a href="www.hellodatascience.com">Hellodatascience.com </a></li>
+					<li> 예) Fitbit, Rescuetime, Coachme.com, <a href="www.hellodatascience.com">Hellodatascience.com </a></li>
 					</ul>
 					
 				</section>
+                                <section>
+					<img width="400" height="350" data-src="fitbit-body-yslee.PNG">
+					<img width="400" height="350" data-src="fitbit-step-yslee.PNG">
+					<img width="400" height="350" data-src="rescue-time.PNG">
+                           
+                                </section>
 				<section>
 					<h2> Graph of My Fitness </h2>
 					<iframe width="800" height="600" src="https://www.youtube.com/embed/qPGkmtZf0q0" frameborder="0" allowfullscreen></iframe>
