--- a/javaprogramming.html
+++ b/javaprogramming.html
@@ -54,12 +54,12 @@
 				<section>
 					<h2>프로그래밍이 중요한가요? </h2>
 					<blockquote>
-					<p class="fragment"> &ldquo; 네, 여러분은 컴퓨터전공생으로 하드웨어, 소프트웨어에 관한 공부를 하여 문제해결을 합니다. 프로그래밍은 문제해결을 위한 도구입니다. &rdquo; by 이영석</p>
+					<p class="fragment"> &ldquo; 네, 여러분은 컴퓨터전공생으로 하드웨어와 소프트웨어에 관한 공부를 하여 문제해결을 합니다. 프로그래밍은 문제해결을 위한 도구입니다. &rdquo; by 이영석</p>
 					</blockquote>
 				</section>
 
 				<section>
-					<h2>왜 자바를 공부하나요?</h2>
+					<h2>자바 어디에?</h2>
 					<ul>
 					<li> 웹 프로그래밍을 위해서  </li>
 					<li> 모바일 프로그래밍을 위해서 </li>
@@ -68,14 +68,6 @@
 					</ul>
 				</section>
 
-				<section data-background="#dddddd">
-					<h2> 프로그래밍 랭킹  </h2>
-					<ul>
-					<li> 어떤 프로그래밍 언어를 공부할까? </li>
-					<li> 남들 많이 쓰는 것부터... </li>
-					</ul>
-					<iframe src="https://www.tiobe.com/tiobe-index/" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-				</section>
 
 				<section>
 					<h2> 주요 특징 </h2>
@@ -103,6 +95,15 @@
 					<li> 아니요. 일부 분야에서 많이 씁니다. </li>
 					<li> NMS, 모니터링, 웹으로 불가능한 앱을 크로스 플랫폼에서 지원할 때 </li>
 					</ol>
+				</section>
+
+				<section data-background="#dddddd">
+					<h2> 왜 자바 공부하나요?  </h2>
+					<ul>
+					<li> 어떤 프로그래밍 언어를 공부할까? </li>
+					<li> 남들 많이 쓰는 것부터... </li>
+					</ul>
+					<iframe src="https://www.tiobe.com/tiobe-index/" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 				</section>
 
 			</div>
