--- a/computer-network.html
+++ b/computer-network.html
@@ -42,7 +42,7 @@
 			<div class="slides">
 				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
 					<h1>컴퓨터네트워크 </h1>
-					<h3>이 과목은 어디에 쓰이는고?</h3>
+					<h3>이 과목은 어디에 쓰이나요?</h3>
 					<p>
 						<small>Created by <a href="http://yslee.cs-cnu.org">이영석 (http://yslee.cs-cnu.org)</a> </small>
 					</p>
@@ -60,40 +60,40 @@
 				</section>
 
 				<section>
-					<h2>자바 어디에?</h2>
+					<h2>취업 부문이 어딘가요?</h2>
 					<ul>
-					<li> 웹 프로그래밍을 위해서  </li>
-					<li> 모바일 프로그래밍을 위해서 </li>
-					<li> 객체지향 프로그래밍을 위해서  </li>
-					<li> 오픈소스 자바 프로그래밍 프로젝트가 많이 있습니다. (하둡) </li>
+					<li> 백엔드 ?  </li>
+					<li> 풀스택 ? </li>
+					<li> 네트워크/보안/인프라 개발/엔지니어?  </li>
+					<li> 데이터분석가 </li>
 					</ul>
 				</section>
 
 
 				<section>
-					<h2> 주요 특징 </h2>
-					<p class ="fragment"> 가상 머신 </p>
-					<p class ="fragment"> 수많은 개발자, 레퍼런스 </p>
-					<p class ="fragment"> 높은 생산성, 안정성, 가독성 </p>
-					<p class ="fragment"> 기기 호환성 </p>
+					<h2> 파이썬으로 네트워크/서버 개발이 가능한가요? </h2>
+					<p class ="fragment"> 운영체제는 C와 C++로 구현됩니다. </p>
+					<p class ="fragment"> 기존 서버 프로그램들은 C, C++, Java등이 많이 사용됩니다. </p>
+					<p class ="fragment"> 파이썬의 네트워크 활용도가 높은 프레임워크가 많이 나오고 있습니다: Django </p>
+
 
 				</section>
 
 
 				<section>
-					<h2>단점</h2>
-					<p class="fragment">  느린  JVM 로딩 속도
-					<p class="fragment">  가상 머신 바이트코드 속도
-					<p class="fragment">  가비지 컬렉션에 의한 실행 지연 문제
-          <p class="fragment">  소스코드 길이가 길다
-					<p class="fragment">  명사로만 생각한다
+					<h2>TCP/IP는 소켓프로그래밍만 배우면 끝이 아닌가요??</h2>
+					<p class="fragment">  Linux Kernel: TCP 혼잡제어 모듈(Cubic, BRR)
+					<p class="fragment">  오픈소스 네트워크 프레임워크: Netty
+					<p class="fragment">  구글은 TCP/IP를 통째로 바꾸고 있음: QUIC, TCP 초기윈도우, 혼잡제어
+          <p class="fragment">  네트워크 서버 성능 최적화
+					<p class="fragment">
 					</p>
 				</section>
 
 				<section>
-					<h2> 자바 스윙 많이 쓰나요 ?</h2>
+					<h2> 파이썬은 해볼만한 언어인가요?</h2>
 					<ol>
-					<li> 아니요. 일부 분야에서 많이 씁니다. </li>
+					<li> 쉽게, 빠르게 구현해볼 수 있어서 학습하기 좋습니다. </li>
 					<li> NMS, 모니터링, 웹으로 불가능한 앱을 크로스 플랫폼에서 지원할 때 </li>
 					</ol>
 				</section>
