--- a/computer-network.html
+++ b/computer-network.html
@@ -85,26 +85,27 @@
 					<p class="fragment">  Linux Kernel: TCP 혼잡제어 모듈(Cubic, BRR)
 					<p class="fragment">  오픈소스 네트워크 프레임워크: Netty
 					<p class="fragment">  구글은 TCP/IP를 통째로 바꾸고 있음: QUIC, TCP 초기윈도우, 혼잡제어
-          <p class="fragment">  네트워크 서버 성능 최적화
+          <p class="fragment">  네트워크, 클라우드 서버 성능 최적화
 					<p class="fragment">
 					</p>
 				</section>
 
 				<section>
-					<h2> 파이썬은 해볼만한 언어인가요?</h2>
+					<h2> 리눅스 커널에서 TCP 혼잡제어 SW?</h2>
 					<ol>
-					<li> 쉽게, 빠르게 구현해볼 수 있어서 학습하기 좋습니다. </li>
-					<li> NMS, 모니터링, 웹으로 불가능한 앱을 크로스 플랫폼에서 지원할 때 </li>
+					<li> 컴퓨터네트워크의 핵심 문제 </li>
+					<li> 단말기와 서버의 운영체제에 구현되는 것 </li>
+					<li> NCSU의 이인종 교수팀이 개발한 CUBIC이 리눅스의 디폴트 </li>
 					</ol>
 				</section>
 
 				<section data-background="#dddddd">
-					<h2> 왜 자바 공부하나요?  </h2>
+					<h2> TCP Cubic  </h2>
 					<ul>
-					<li> 어떤 프로그래밍 언어를 공부할까? </li>
-					<li> 남들 많이 쓰는 것부터... </li>
+					<li> TCP Reno, NewReno 계열 </li>
+					<li> RTT가 크고 bandwidth가 높은 구간에서 잘 동작시키기 위해서 개발됨: HSTCP, FastTCP 등과 경쟁 </li>
 					</ul>
-					<iframe src="https://www.tiobe.com/tiobe-index/" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+					<iframe src="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 				</section>
 
 			</div>
