--- a/computer-network.html
+++ b/computer-network.html
@@ -105,11 +105,11 @@
 					<li> TCP Reno, NewReno 계열 </li>
 					<li> RTT가 크고 bandwidth가 높은 구간에서 잘 동작시키기 위해서 개발됨: HSTCP, FastTCP 등과 경쟁 </li>
 					</ul>
-					<iframe src="" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+					<iframe src="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 				</section>
 
 				<section data-background-iframe="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c" data-background-interactive>
-					<h2>Iframe</h2>
+					<h2>리눅스 TCP 소스코드</h2>
 				</section>
 
 			</div>
