--- a/computer-network.html
+++ b/computer-network.html
@@ -47,7 +47,7 @@
 						<small>Created by <a href="http://yslee.cs-cnu.org">이영석 (http://yslee.cs-cnu.org)</a> </small>
 					</p>
  					<p>
-						<small><a href="http://twitter.com/yslee1225">@yslee1225 (yslee@cs-cnu.org)</a></small>
+						<small>yslee@cs-cnu.org</small>
 					</p>
 				</section>
 
@@ -108,8 +108,9 @@
 					<iframe src="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 				</section>
 
-				<section data-background-iframe="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c" data-background-interactive>
-					<h2>리눅스 TCP 소스코드</h2>
+				<section>
+					<h2> Linux TCP 소스코드
+					<h2><a href="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c">Github</a></h2>
 				</section>
 
 			</div>
