--- a/computer-network.html
+++ b/computer-network.html
@@ -105,12 +105,13 @@
 					<li> TCP Reno, NewReno 계열 </li>
 					<li> RTT가 크고 bandwidth가 높은 구간에서 잘 동작시키기 위해서 개발됨: HSTCP, FastTCP 등과 경쟁 </li>
 					</ul>
-					<iframe src="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c" width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 				</section>
 
 				<section>
 					<h2> Linux TCP 소스코드
-					<h2><a href="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c">Github</a></h2>
+					<ul>
+						<li> <a href="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c">Github</a></li>
+					</ul>
 				</section>
 
 			</div>
