--- a/computer-network.html
+++ b/computer-network.html
@@ -99,7 +99,7 @@
 					</ol>
 				</section>
 
-				<section data-background="#dddddd">
+				<section>
 					<h2> TCP Cubic  </h2>
 					<ul>
 					<li> TCP Reno, NewReno 계열 </li>
@@ -108,9 +108,10 @@
 				</section>
 
 				<section>
-					<h2> Linux TCP 소스코드
+					<h2> Linux TCP 소스코드 </h2>
 					<ul>
 						<li> <a href="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c">Github</a></li>
+						<img width="800" height="430" data-src="tcp.png">
 					</ul>
 				</section>
 
