--- a/computer-network.html
+++ b/computer-network.html
@@ -108,10 +108,10 @@
 				</section>
 
 				<section>
-					<h2> Linux TCP 소스코드 </h2>
+					<h2> Linux TCP Cubic 소스코드 </h2>
 					<ul>
 						<li> <a href="https://github.com/torvalds/linux/blob/master/net/ipv4/tcp_cubic.c">Github</a></li>
-						<img width="800" height="430" data-src="tcp.png">
+						<img width="1000" data-src="tcp.png">
 					</ul>
 				</section>
 
