--- a/computer-network.html
+++ b/computer-network.html
@@ -115,6 +115,17 @@
 					</ul>
 				</section>
 
+				<section>
+					<h2> Googl QUIC </h2>
+					<ul>
+						<li> 웹성능 개선을 목표로 프로토콜을 새로 만들어서 서비스하고 있음</li>
+						<li> <a href="http://net-internals"> http://net-internals </a> </li>
+						<li> QUIC: UDP+TLS1.3+HTTP/2</li>
+						<img width="1000" data-src="quic.png">
+					</ul>
+				</section>
+
+
 			</div>
 
 		</div>
