--- a/computer-network.html
+++ b/computer-network.html
@@ -116,7 +116,7 @@
 				</section>
 
 				<section>
-					<h2> Googl QUIC </h2>
+					<h2> Google QUIC </h2>
 					<ul>
 						<li> 웹성능 개선을 목표로 프로토콜을 새로 만들어서 서비스하고 있음</li>
 						<li> <a href="http://net-internals"> http://net-internals </a> </li>
@@ -124,6 +124,19 @@
 						<img width="1000" data-src="quic.png">
 					</ul>
 				</section>
+
+				<section>
+					<h2> Google BBR </h2>
+					<ul>
+						<li> TCP 혼잡제어: BBR (bottleneck bandwidth and rtt)</li>
+						<li>  </li>
+						<li> Linux 커널 4.9 이후 </li>
+						<video>
+							<source data-src="https://vimeo.com/291585392" />
+						</video>
+					</ul>
+				</section>
+
 
 
 			</div>
