--- a/computer-network.html
+++ b/computer-network.html
@@ -129,11 +129,8 @@
 					<h2> Google BBR </h2>
 					<ul>
 						<li> TCP 혼잡제어: BBR (bottleneck bandwidth and rtt)</li>
-						<li>  </li>
 						<li> Linux 커널 4.9 이후 </li>
-						<video>
-							<source data-src="https://vimeo.com/291585392" />
-						</video>
+						<iframe src="https://vimeo.com/291585392" data-autoplay></iframe>
 					</ul>
 				</section>
 
