--- a/computer-network.html
+++ b/computer-network.html
@@ -130,7 +130,7 @@
 					<ul>
 						<li> TCP 혼잡제어: BBR (bottleneck bandwidth and rtt)</li>
 						<li> Linux 커널 4.9 이후 </li>
-						<iframe src="https://vimeo.com/291585392" width=800></iframe>
+						<iframe src="http://www.ciokorea.com/t/1139/14703/35292" width=800></iframe>
 					</ul>
 				</section>
 
