--- a/computer-network.html
+++ b/computer-network.html
@@ -119,7 +119,7 @@
 					<h2> Google QUIC </h2>
 					<ul>
 						<li> 웹성능 개선을 목표로 프로토콜을 새로 만들어서 서비스하고 있음</li>
-						<li> <a href="http://net-internals"> http://net-internals </a> </li>
+						<li> <a href="chrome://net-internals"> chrome://net-internals </a> </li>
 						<li> QUIC: UDP+TLS1.3+HTTP/2</li>
 						<img width="1000" data-src="quic.png">
 					</ul>
@@ -130,7 +130,7 @@
 					<ul>
 						<li> TCP 혼잡제어: BBR (bottleneck bandwidth and rtt)</li>
 						<li> Linux 커널 4.9 이후 </li>
-						<iframe src="http://www.ciokorea.com/t/1139/14703/35292" width=800></iframe>
+						<iframe src="http://www.ciokorea.com/t/1139/14703/35292"  width="100%" height="556" frameborder="2" marginwidth="0" marginheight="0" allowfullscreen>></iframe>
 					</ul>
 				</section>
 
