--- a/computer-network.html
+++ b/computer-network.html
@@ -119,8 +119,8 @@
 					<h2> Google QUIC </h2>
 					<ul>
 						<li> 웹성능 개선을 목표로 프로토콜을 새로 만들어서 서비스하고 있음</li>
-						<li> <a href="chrome://net-internals"> chrome://net-internals </a> </li>
 						<li> QUIC: UDP+TLS1.3+HTTP/2</li>
+						<li> <a href="chrome://net-internals"> chrome://net-internals </a> </li>
 						<img width="1000" data-src="quic.png">
 					</ul>
 				</section>
@@ -134,7 +134,15 @@
 					</ul>
 				</section>
 
-
+				<section>
+					<h2> 컴공 전공자의 자세 </h2>
+					<ul>
+						<li> 시스템/클라우드(운영체제, 네트워크, DB): C/C++/Go, Python </li>
+						<li> 모바일 웹/앱 프로그래밍: HTML/JavaScript/CSS, Java, Objective Python</li>
+						<li> 협업개발도구: 깃, 디자인패턴, ...
+						<li> 데이터사이언스: 데이터수집, 분산처리, 기계학습
+					</ul>
+				</section>
 
 			</div>
 
