--- a/computer-network.html
+++ b/computer-network.html
@@ -40,7 +40,7 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
+				<section data-background="first.jpg" data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
 					<h1>컴퓨터네트워크 </h1>
 					<h3>이 과목은 어디에 쓰이나요?</h3>
 					<p>
