--- a/computer-network.html
+++ b/computer-network.html
@@ -40,7 +40,7 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background="first.jpg" widtth=400 data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
+				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
 					<h1>컴퓨터네트워크 </h1>
 					<h3>이 과목은 어디에 쓰이나요?</h3>
 					<p>
@@ -49,6 +49,8 @@
  					<p>
 						<small>yslee@cs-cnu.org</small>
 					</p>
+					<img width="500" data-src="first.jpg">
+
 				</section>
 
 				<section>
