--- a/bigdata.html
+++ b/bigdata.html
@@ -67,7 +67,7 @@
 				</section>
 
 				<section data-background="#dddddd">
-					<h2> 숙제: 100 TB 정렬 속도  </h2>
+					<h2> 숙제: 100 TB 정렬을 가장 빨리 하는 사람은 A+ !  </h2>
 					<ul>
 					<li> 무슨 알고리즘을 쓸까? </li>
 					<li> 현실적인 문제: 100 TB 저장 ? 메모리 ? ... </li>
@@ -95,9 +95,9 @@
 				<section>
 					<h2>데이터 다루는 핵심 기술은 ?</h2>
 					<ol>
-					<li> 데이터 수집</li>
+					<li> 데이터 수집: Apache Flume, Apache Kafka </li>
 					<li> 분석알고리즘: 추천, 예측 (data mining/machine learning)</li>
-					<li> SW플랫폼: 분산컴퓨팅 SW (MapReduce, Hadoop, Spark, ...) </li>
+					<li> 분산컴퓨팅 SW: MapReduce, Hadoop, Spark, ...) </li>
 					<li> <p class="fragment">분석알고리즘 + SW 플랫폼 -> 문제해결 </p> </li>
 					</ol>
 				</section>
@@ -109,8 +109,8 @@
 
 				<section>
 					<h2>Example: Recommendation</h2>
-					<p> Facebook's EdgeRank</p>
-					<img width="800" height="430" data-src="http://www.socialbakers.com//storage/www/edgerank-1-.png">
+					<p> Netflix Prize</p>
+					<img width="800" height="430" data-src="https://assets3.thrillist.com/v1/image/2677184/size/gn-gift_guide_variable_c;jpeg_quality=20.jpg">
 				</section>
 
 				<section>
