--- a/bigdata.html
+++ b/bigdata.html
@@ -198,16 +198,11 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h2>Melon</h2>
+					<h2>Nexon</h2>
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/qpaAGZZf5VG6LR" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/gruter/gruter-techday-2014-melon-bigdata" title="Gruter TECHDAY 2014 MelOn BigData" target="_blank">Gruter TECHDAY 2014 MelOn BigData</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/gruter">Gruter</a></strong> </div>
+<iframe src="https://career.nexon.com/user/recruit/notice/noticeView?joinCorp=NX&reNo=20160255" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/gruter/gruter-techday-2014-melon-bigdata" title="Gruter TECHDAY 2014 MelOn BigData" target="_blank">Gruter TECHDAY 2014 MelOn BigData</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/gruter">Gruter</a></strong> </div>
 				</section>
 
-
-				<section>
-					<h2>R and others </h2>
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/m2kHtjlrDe9wt3" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/gruter/ruck2015-gruter-public" title="Big data analysis with R and Apache Tajo (in Korean)" target="_blank">Big data analysis with R and Apache Tajo (in Korean)</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/gruter">Gruter</a></strong> </div>
-				</section>
 
 				<section>
 					<h2>Amazon </h2>
