--- a/bigdata.html
+++ b/bigdata.html
@@ -220,14 +220,14 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h2> DNLAB </h2>
-					<iframe src="//www.slideshare.net/slideshow/embed_code/key/l8Gwlp464dK6TT" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/YeonheeLee/net-flowhadoop-flocon2013yhleefinal" title="Net flowhadoop flocon2013_yhlee_final" target="_blank">Net flowhadoop flocon2013_yhlee_final</a> </strong> from <strong><a target="_blank" href="//www.slideshare.net/YeonheeLee">Yeounhee Lee</a></strong> </div>
+					<h2> DNLAB Bigdata </h2>
+					<iframe src="https://scholar.google.co.kr/citations?user=oZYCFssAAAAJ&hl=ko" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px">
 				</section>
 
 				<section data-background="#dddddd">
-					<h2> DNLAB's News </h2>
+					<h2> DNLAB's GitHub Project  </h2>
 					<p> <a href="https://github.com/ssallys/p3"> Github P3 project </a> </p>
-					<iframe src="http://www.dt.co.kr/contents.html?article_no=2013011602011060746002" width="800" height="600"></iframe>
+					<iframe src="https://github.com/ssallys/p3" width="800" height="600"></iframe>
 				</section>
 
 				<section>
