--- a/bigdata.html
+++ b/bigdata.html
@@ -221,13 +221,13 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> DNLAB Bigdata </h2>
-					<iframe src="https://scholar.google.co.kr/citations?user=oZYCFssAAAAJ&hl=ko" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px">
+					<iframe src="scholar.jpg" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px">
 				</section>
 
 				<section data-background="#dddddd">
 					<h2> DNLAB's GitHub Project  </h2>
 					<p> <a href="https://github.com/ssallys/p3"> Github P3 project </a> </p>
-					<iframe src="https://github.com/ssallys/p3" width="800" height="600"></iframe>
+					<iframe src="github.jpg" width="800" height="600"></iframe>
 				</section>
 
 				<section>
