--- a/bigdata.html
+++ b/bigdata.html
@@ -231,10 +231,10 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h2> <a href="http://www.quantifiedself.com"> Quantified Self </a> </h2>
+					<h2> Les's begin with small data! </a> </h2>
 					<ul>
-					<li> 자신을 측정하여 삶의 개선하려는 운동 </li>
-					<li> 핵심은 자동 수집 및 분석</li>
+					<li> <a href="http://www.quantifiedself.com"> Quantified Self (자신을 측정하여 삶의 개선하려는 운동) </li>
+					<li> 핵심은 Small data 수집 및 분석</li>
 					<li> 예) Fitbit, Rescuetime, Coachme.com, <a href="www.hellodatascience.com">Hellodatascience.com </a></li>
 					</ul>
 
