--- a/bigdata.html
+++ b/bigdata.html
@@ -221,7 +221,7 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> DNLAB Bigdata </h2>
-					<iframe src="scholar.JPG" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px">
+					<iframe src="scholar.JPG" width="595"  </iframe> <div style="margin-bottom:5px">
 				</section>
 
 				<section data-background="#dddddd">
