--- a/bigdata.html
+++ b/bigdata.html
@@ -221,7 +221,7 @@ function reduce(String word, Iterator partialCounts):
 
 				<section>
 					<h2> DNLAB Bigdata </h2>
-					<iframe src="scholar.JPG" width="800" height="600" </iframe>
+					<iframe src="scholar.JPG" width="800" height="400"> </iframe>
 				</section>
 
 				<section data-background="#dddddd">
