--- a/bigdata.html
+++ b/bigdata.html
@@ -145,7 +145,7 @@
 					</section>
 					<section>
 						<h2>Big Data Echosystem</h2>
-						<img width="800" height="500" data-src="kafka.png">
+						<img width="800" height="500" data-src="kafka.PNG">
 					</section>
 				</section>
 
