--- a/bigdata.html
+++ b/bigdata.html
@@ -49,7 +49,7 @@
 				</section>
 
 				<section>
-					<h2>데이터? 알고리즘? </h2>
+					<h2><font color="#f08">데이터? </font> 알고리즘? </h2>
 					<blockquote>
 					<p class="fragment"> &ldquo;More data usually beats better algorithms.&rdquo; by Anand Rajaraman</p>
 					</blockquote>
