--- a/bigdata.html
+++ b/bigdata.html
@@ -42,7 +42,7 @@
 			<div class="slides">
 				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
 					<h1>데이터로 문제풀기</h1>
-					<h3>Data, SW, Insight ?</h3>
+					<h3><font color="#f08">Data</font>, SW, <font color="#00FF00">Insight </font>?</h3>
 					<p>
 						<small>Created by <a href="http://yslee.cs-cnu.org">이영석 (http://yslee.cs-cnu.org)</a> </small>
 					</p>
