--- a/bigdata.html
+++ b/bigdata.html
@@ -40,7 +40,7 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
+				<section data-transition="slide" data-background="#4d7e65" data-background-image = "yslee-con.png" data-background-transition="zoom">
 					<h1>데이터로 문제풀기</h1>
 					<h3><font color="#f08">Data</font>, SW, <font color="#00FF00">Insight </font>?</h3>
 					<p>
