--- a/bigdata.html
+++ b/bigdata.html
@@ -41,10 +41,10 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section data-transition="slide" data-background="#4d7e65" data-background-image = "yslee-icon.png" data-background-transition="zoom">
-					<h1>데이터로 문제풀기</h1>
-					<h3><font color="#f08">Data</font>, SW, <font color="#00FF00">Insight </font>?</h3>
+					<h1><font color="#000000">데이터로 문제풀기</font></h1>
+					<h3><font color="#f08">Data,</font> <font color="#FFFF00">SW,</font> <font color="#00FF00">Insight </font>?</h3>
 					<p>
-						<small>Created by <a href="http://yslee.cs-cnu.org">이영석 (http://yslee.cs-cnu.org)</a> </small>
+						<small>Created by <a href="http://yslee.cs-cnu.org"><font color="008080">이영석 (http://yslee.cs-cnu.org)</font></a> </small>
 					</p>
 				</section>
 
