--- a/bigdata.html
+++ b/bigdata.html
@@ -42,9 +42,9 @@
 			<div class="slides">
 				<section data-transition="slide" data-background="#4d7e65" data-background-image = "yslee-icon.png" data-background-transition="zoom">
 					<h1><font color="#000000">데이터로 문제풀기</font></h1>
-					<h3><font color="#f08">Data,</font> <font color="#00FFFF">SW,</font> <font color="#00FF00">Insight </font>?</h3>
+					<h3><font color="#f08">Data,</font> <font color="#000080">SW,</font> <font color="#00FF00">Insight </font>?</h3>
 					<p>
-						<small>Created by <a href="http://yslee.cs-cnu.org"><font color="000080">이영석 (http://yslee.cs-cnu.org)</font></a> </small>
+						<small>Created by <a href="http://yslee.cs-cnu.org"><font color="800000">이영석 (http://yslee.cs-cnu.org)</font></a> </small>
 					</p>
 				</section>
 
