--- a/bigdata.html
+++ b/bigdata.html
@@ -49,9 +49,9 @@
 				</section>
 
 				<section>
-					<h2><font color="#f08">데이터? </font> 알고리즘? </h2>
+					<h2><font color="#f08">데이터? </font> <font color="FFFF00">알고리즘? </font> </h2>
 					<blockquote>
-					<p class="fragment"> &ldquo;More data usually beats better algorithms.&rdquo; by Anand Rajaraman</p>
+					<p class="fragment"> &ldquo;More <font color = "#f08">data</font> usually beats better <font color="FFFF00"> algorithms</font>.&rdquo; by Anand Rajaraman</p>
 					</blockquote>
 				</section>
 
