--- a/bigdata.html
+++ b/bigdata.html
@@ -127,14 +127,7 @@
 						&ldquo; Data sets whose size is beyond the ability of commonly used software tools to capture, manage, and process the data within a tolerable elapsed time. &rdquo;
 						</blockquote>
 					</section>
-					<section>
-						<h2>Characteristics of Big Data</h2>
-						<ul>
-						<li> Volume </li>
-						<li> Velocity </li>
-						<li> Variety </li>
-						</ul>
-					</section>
+
 					<section>
 						<h2>Architecture of Big Data</h2>
 						<ol>
@@ -220,17 +213,6 @@ function reduce(String word, Iterator partialCounts):
 				</section>
 
 				<section>
-					<h2> DNLAB Bigdata </h2>
-					<iframe src="scholar.JPG" width="800" height="400"> </iframe>
-				</section>
-
-				<section data-background="#dddddd">
-					<h2> DNLAB's GitHub Project  </h2>
-					<p> <a href="https://github.com/ssallys/p3"> Github P3 project </a> </p>
-					<iframe src="github.JPG" width="800" height="600"></iframe>
-				</section>
-
-				<section>
 					<h2> Les's begin with small data! </a> </h2>
 					<ul>
 					<li> <a href="http://www.quantifiedself.com"> Quantified Self (자신을 측정하여 삶의 개선하려는 운동) </li>
@@ -258,13 +240,24 @@ function reduce(String word, Iterator partialCounts):
 				<section>
 					<h2> Data Mind </h2>
 <p><a href="https://commons.wikimedia.org/wiki/File:Nightingale-mortality.jpg#/media/File:Nightingale-mortality.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/1/17/Nightingale-mortality.jpg" alt="Polar chart by Florence Nightingale, 1858" height="600" width="800"></a><br>By <a href="//en.wikipedia.org/wiki/Florence_Nightingale" class="extiw" title="w:Florence Nightingale">w:Florence Nightingale</a> (1820?1910). - <a rel="nofollow" class="external free" href="http://www.royal.gov.uk/output/Page3943.asp">http://www.royal.gov.uk/output/Page3943.asp</a>, Public Domain, https://commons.wikimedia.org/w/index.php?curid=1474443</p>
-
 				</section>
 
 				<section>
-					<h2> Data Mind </h2>
-					<img width="800" height="430" data-src="http://matrix.msu.edu/~johnsnow/images/online_companion/chapter_images/fig12-5.jpg">
+					<h2> DNLAB Bigdata </h2>
+							<iframe src="scholar.JPG" width="800" height="400"> </iframe>
 				</section>
+
+				<section data-background="#dddddd">
+					<h2> DNLAB's GitHub Project  </h2>
+						<p> <a href="https://github.com/ssallys/p3"> Github P3 project </a> </p>
+						<iframe src="github.JPG" width="800" height="600"></iframe>
+				</section>
+
+				<section>
+					<h2> DNLAB WordCloud </h2>
+							<iframe src="2019-dnlab-wordcloud.PNG" width="800" height="400"> </iframe>
+				</section>
+
 
 				<section>
 					<h2> Interested in Big Data ? </h2>
@@ -273,7 +266,7 @@ function reduce(String word, Iterator partialCounts):
 					<li> 데이터과학은 문제를 해결하는 도구: Small data부터 시작 (LAMP) </li>
 					<li> Hadoop/Hive/Spark + Python scikit + R + Tensorflow ... (SMAQ) </li>
 					<li> Git, JIRA, Jenkins, Slack, Trello, JUnit, Selenium, ...
-					<li> 컴퓨터공학 기반을 갖춘 데이터과학자가 됩시다 ! </li>
+					<li> <font color="#FFFF00">컴퓨터공학</font> 기반을 갖춘 <font color="00FF00">데이터과학자</font>가 됩시다 ! </li>
 					</ul>
 				</section>
 
